Fix grid alignment

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,6 @@ body {
 .container {
   display: grid;
   grid-template-columns: 350px auto;
-  height: 100vh;
 }
 
 .sidebar ul,
@@ -148,7 +147,7 @@ main {
   padding: 30px;
   background-color: var(--bg);
   display: grid;
-  grid: repeat(2, 1fr) / 3fr 1fr;
+  grid: repeat(2, auto) / 3fr 1fr;
   gap: 30px;
 
   section > h2 {
@@ -176,6 +175,8 @@ main {
   display: grid;
   grid: repeat(3, 1fr) / repeat(2, 1fr);
   gap: 30px;
+  /* take up rest of section (minus header height) */
+  height: calc(100% - (1.2rem * 1.5 + 15px));
 }
 .project-card {
   display: flex;
